<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@drawable/about_background"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/username_info"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/gender_info"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:text="@string/gender"/>
            <TextView
                android:id="@+id/age_info"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/age"/>
            <TextView
                android:id="@+id/email_info"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/email" />
            <TextView
                android:id="@+id/location_info"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/location" />
        </LinearLayout>


    </LinearLayout>
    <Button
        android:id="@+id/Logout"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/salmonbutton_selector"
        android:text="@string/logout"/>
</LinearLayout>