<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">
    <ImageView
        android:id="@+id/Logo"
        android:layout_marginTop="50dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/icon"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/App_title"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/user_pswd"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:elevation="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/user_email_add"
                android:textColor="#000" />

            <EditText
                android:id="@+id/user_input"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_background"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pswd"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:inputType="textWebEmailAddress"
                android:text="@string/password"
                android:textColor="#000" />

            <EditText
                android:id="@+id/pswd_input"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:maxLines="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/Login"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:background="@drawable/salmonbutton_selector"
            android:textColor="#000"
            android:elevation="4dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/Signin"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/signin"
                android:background="@drawable/salmonbutton_selector"
                android:textColor="#000"
                android:elevation="4dp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>