<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <LinearLayout
        android:id="@+id/intruduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/rightfinger"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:background="@drawable/time_background">
        <TextView
            android:id="@+id/countdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:textSize="80dp"
            android:fontFamily="cursive"/>
    </LinearLayout>

    <TextView
        android:id="@+id/countdowntimer"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:textSize="15dp"/>
    <Button
        android:id="@+id/start_feedback"
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/startfeedback"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/salmonbutton_selector"/>
</LinearLayout>