<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5F5F5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:text="@string/title"
                    android:textColor="#000000"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/user_email_add"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/signin_email"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="@drawable/edittext_background"
                        android:hint="test@ntu.edu.sg"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/password"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/signin_pswd"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="@drawable/edittext_background"
                        android:hint="******"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/username"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/signin_username"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="@drawable/edittext_background"
                        android:hint="Mr.Test"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/user_age"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/signin_age"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="@drawable/edittext_background"
                        android:hint="22"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/user_location"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/signin_location"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="@drawable/edittext_background"
                        android:hint="N4-b3c-14"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/user_gender"
                        android:textSize="15dp" />

                    <RadioGroup
                        android:id="@+id/signin_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Male" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Female" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/confirm"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@drawable/whitebutton_selector"
                android:text="@string/comfirm" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>