<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/showcase1"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/showcase_selector"
                android:elevation="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/airtemp"
                        android:gravity="center_horizontal"
                        android:textSize="20dp" />
                </LinearLayout>
                <TextView
                    android:id="@+id/airtemp_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/nodata"
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/showcase2"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/showcase_selector"
                android:elevation="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/heartrate"
                        android:gravity="center_horizontal"
                        android:textSize="20dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/heart_rate_data"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/nodata"
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/showcase3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/showcase_selector"
                android:elevation="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/skintemp"
                        android:gravity="center_horizontal"
                        android:textSize="20dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/skintemp_data"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/nodata"
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/showcase4"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/showcase_selector"
                android:elevation="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/airpressure"
                        android:gravity="center_horizontal"
                        android:textSize="20dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/airpressure_data"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/nodata"
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/showcase5"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/showcase_selector"
                android:orientation="horizontal"
                android:elevation="10dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/brightness"
                        android:gravity="center_horizontal"
                        android:textSize="20dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/brightness_data"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/nodata"
                    android:textSize="20dp"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>

